--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 
     <div class="sidebar">
         <div class="heading">
-          <h1>Where I've Been</h1>
+          <h1>DVM Travels</h1>
         </div>
         <div id="listings" class="listings"></div>
+        
       </div>
       
 </head>
