--- a/index.html
+++ b/index.html
@@ -19,13 +19,30 @@
           
       </div>
       
+      <style>
+        /* Style for the text box container */
+        #text-box {
+          position: absolute;
+          top: 5px;
+          right: 5px;
+          background-color: rgb(234, 224, 224);
+          padding: 2px;
+          border: 1px solid #7491d6;
+          z-index: 1;
+        }
+      </style>
 </head>
 
 
 <div id="map" class="map"></div>
 
 <body><script src="script.js"></script>
-    </body>
+
+  <div id="text-box">
+    <p>Updated in December 2023</p>
+  </div>
+
+</body>
 
 
 </html>
