--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       <style>
         /* Style for the text box container */
         #text-box {
+          font: 800 15px/22px 'Montserrat', sans-serif;
           position: absolute;
           top: 5px;
           right: 5px;
