--- a/index.html
+++ b/index.html
@@ -24,10 +24,11 @@
         #text-box {
           font: 800 15px/22px 'Montserrat', sans-serif;
           position: absolute;
-          top: 5px;
+          top: 10px;
           right: 5px;
-          background-color: rgb(234, 224, 224);
-          padding: 2px;
+          height: min-content;
+          background-color: rgba(234, 224, 224, 0.491);
+          padding: .5px;
           border: 1px solid #7491d6;
           z-index: 1;
         }
