--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html>
+  <title>DVM Travels</title>
+  <link rel="shortcut icon" type="image/png" href="globe.png"/>
 <head>
   <Files "*.json">
     Header set Access-Control-Allow-Origin "*"
