--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <div id="map" class="map"></div>
 
 <body><script src="script.js"></script>
-
+<meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no' />
   <div id="text-box">
     <p>Updated in December 2023</p>
   </div>
