--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
         #text-box {
           font: 800 15px/22px 'Montserrat', sans-serif;
           position: absolute;
-          top: 10px;
+          bottom: 20px;
           right: 5px;
           height: min-content;
           background-color: rgba(234, 224, 224, 0.491);
-          padding: .5px;
+          padding: 0px;
           border: 1px solid #7491d6;
           z-index: 1;
         }
