--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <title>DVM Travels</title>
-  <link rel="shortcut icon" type="image/png" href="globe.png"/>
+  <link rel="shortcut icon" type="image/png" href="favicon.png"/>
 <head>
   <Files "*.json">
     Header set Access-Control-Allow-Origin "*"
